fix: добавляет z-index для header

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -4,6 +4,8 @@
 
   background-color: $color-black-russian;
 
+  z-index: 20;
+
   position: fixed;
   top: 0;
 
